crud for order & fix error & update readme
